@@ -1,38 +1,32 @@
 package com.kyanite.deeperdarker.forge.datagen.loot;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
-import net.minecraft.data.DataGenerator;
+import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.level.storage.loot.BuiltInLootTables;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.LootTables;
 import net.minecraft.world.level.storage.loot.ValidationContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
 
 public class DDLootTableProvider extends LootTableProvider {
-    private final List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> lootTables = ImmutableList.of(Pair.of(DDBlockLoot::new, LootContextParamSets.BLOCK), Pair.of(DDChestLoot::new, LootContextParamSets.CHEST), Pair.of(DDEntityLoot::new, LootContextParamSets.ENTITY));
+    private final List<SubProviderEntry> lootTables = List.of(new LootTableProvider.SubProviderEntry(DDBlockLoot::new, LootContextParamSets.BLOCK), new LootTableProvider.SubProviderEntry(DDChestLoot::new, LootContextParamSets.CHEST), new LootTableProvider.SubProviderEntry(DDEntityLoot::new, LootContextParamSets.ENTITY));
 
-    public DDLootTableProvider(DataGenerator pGenerator) {
-        super(pGenerator);
+    public DDLootTableProvider(PackOutput output) {
+        super(output, BuiltInLootTables.all(), List.of(new LootTableProvider.SubProviderEntry(DDBlockLoot::new, LootContextParamSets.BLOCK), new LootTableProvider.SubProviderEntry(DDChestLoot::new, LootContextParamSets.CHEST), new LootTableProvider.SubProviderEntry(DDEntityLoot::new, LootContextParamSets.ENTITY)));
     }
 
-    @NotNull
     @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return this.lootTables;
+    public List<SubProviderEntry> getTables() {
+        return lootTables;
     }
 
     @Override
     protected void validate(Map<ResourceLocation, LootTable> map, @NotNull ValidationContext context) {
-        map.forEach((location, lootTable) -> LootTables.validate(context, location, lootTable));
+        map.forEach((id, table) -> LootTables.validate(context, id, table));
     }
 }
